# investigator

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  README.md  SOP.md  case_manager.py  config.py  enrichment.py  forensics.py  investigate.py  models.py  pyproject.toml
analysis/: __init__.py  entity_resolver.py  mhees.py  network.py  ownership.py  procurement.py  revolving_door.py  scoring.py  smoking_gun.py  timeline.py
cases/opioid-settlement-fund-nonprofits/: README.md  case.json  chain_of_custody.md  connections.json  entities.json  events.json  investigation_log.md  network.html  report.html  scores.json  smoking_guns.json
output/: __init__.py  memo.py  mermaid.py
research/: README.md  SYNTHESIS.md
research/methodology/: DATA_SOURCES.md  MHEES.md  SMOKING_GUN_DETECTORS.md
research/scans/2026-04-10_PA/: METHODOLOGY.md  README.md  parameters.json  top_100_national.md  top_25_arts.md  top_25_education.md  top_25_environment.md  top_25_health.md  top_25_human_services.md  top_25_international.md  top_25_pennsylvania.md  top_25_political.md  top_25_religious.md  top_25_veterans.md
research/scans/2026-04-10_national/: METHODOLOGY.md  README.md  parameters.json  top_100_national.md  top_25_arts.md  top_25_education.md  top_25_environment.md  top_25_health.md  top_25_human_services.md  top_25_international.md  (+4 more)
scanner/: __init__.py  analyzer.py  downloader.py  rankings.py
sources/: __init__.py  aleph.py  base.py  courtlistener.py  openfec.py  opensanctions.py  propublica.py  sec_edgar.py  usaspending.py
watchlist/: __init__.py  scanner.py  store.py
